--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
             <!-- CHANGE HERE by your team Nexus server -->
             <url>http://34.174.105.234:8081/repository/maven-releases/</url>
           </repository>
-          <snapshotRepository>
-            <id>maven-snapshots</id>
+          <!-- <snapshotRepository>
+            <id>maven-snapshots</id> -->
             <!-- CHANGE HERE by your team Nexus server -->
-            <url>http://34.174.105.234:8081/repository/maven-releases/</url>
-          </snapshotRepository>
+            <!-- <url>http://34.174.105.234:8081/repository/maven-releases/</url>
+          </snapshotRepository> -->
         </distributionManagement>
 
         <repositories>
